# siau-devconf

./: .gitmodules  Makefile  PKGBUILD  README.md  README.org
dev-conf/: CMakeLists.txt  device.h  file.cpp  file.h  main.cpp  symbols.h.in
devices/: SmartAC.json  SmartLight.json  SmartPlug.json  Thermostat.json
docs/: Doxyfile  Makefile  communication.rst  conf.py  developer.rst  devices.rst  example.rst  index.rst  integration.rst  man.rst  uvod.rst
docs/example/: iot_device.cpp  iot_device.h  iot_device_impl.cpp
docs/inc/: enddetails.rst  startdetails.rst  startov.rst
docs/man/: conf.py  dev-conf.rst  devconf.rst  index.rst  man_descriptions.py  prepare-man.sh
src/: CMakeLists.txt  common.cmake  file.cpp  file.h  generator.cpp  generator.h  main.cpp  symbols.h.in  userdata.cpp  userdata.h
template/: device.h.in  factory_device.json  iot_device.h.in  main.cpp  main.cpp.in  user_device.json
template/autogen/: message_handler.cpp  message_handler.cpp.in  message_handler.h  message_handler.h.in  mqtt_wrapper.cpp.in  mqtt_wrapper.h.in  user_device.h.in
tests/: CMakeLists.txt  Makefile  README.md  compile  main.cpp  setup_mbed  user_device.json
tests/cli/: devconf.bats
tests/files/: basic.h  basic.h.in
